--- a/Barber/Barber/static/css/Auth/styles.css
+++ b/Barber/Barber/static/css/Auth/styles.css
@@ -22,6 +22,26 @@
     height:100vh;
     background: black;
 }
+.auth-display-photo{
+    width: 40%;
+    height: 100%;
+    background:url('/static/images/Auth/auth-side-img.jpg');
+    background-size: cover;
+}
+.auth-display-photo .gradiant-div{
+    width: 100%;
+    height: 100%;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-align:bottom;
+    color:white;
+    font-size: 40px;
+    background: rgb(255,255,255);
+    background: linear-gradient(216deg, rgba(255,255,255,1) 0%, rgba(0,0,0,0.4598039044719451) 0%, rgba(0,0,0,1) 100%, rgba(0,0,0,0) 100%); 
+    padding: 18%;
+}
+.auth-display-photo .gradiant-div h2{
+    margin-bottom: 14px;
+}
 .auth-form{
     width: 60%;
     height: 100%;
@@ -55,20 +75,21 @@ word-spacing: 4px;
 font-family: 'Courier New', Courier, monospace;
 text-align: center;
 font-weight: 700;
+margin-bottom: 15px;
 }
 .auth-greeting-span span{
     font-size: 16px;
     text-align: center;
-    
 }
 
 .auth-form-inside{
     width:80%;
-    height:90%;
+    height:80%;
     padding: 6px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     background-color:white;
 }
 .input-control{
@@ -85,15 +106,38 @@ font-weight: 700;
     font-size: 16px;
     padding: 10px;
 }
+input[type="text"],.input-control input[type="password"]::placeholder{
+    font-size: 16px;
+}
 .input-control, .input-control input{
 border-radius: 15px;
 }
 
-.auth-display-photo{
-    width: 40%;
-    height: 100%;
-    background:url('/static/images/Auth/auth-side-img.jpg');
-    background-size: cover;
+.input-control-btn{
+    width: 50%;
+    height:15%;
+}
+.input-control-btn button{
+    width: 100%;
+    height:100%;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
+    background-color: rgb(95,200,29);
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
+    font-weight:bold;
+    letter-spacing: 1px;
+
+}
+.input-control-btn ,.input-control-btn button{
+    border-radius: 15px;
 }
 .border{
     border: 1px solid black;
