--- a/Barber/Barber/templates/Auth/auth.html
+++ b/Barber/Barber/templates/Auth/auth.html
@@ -6,7 +6,11 @@
 {% block content %}
 <div class="container"> 
  <div class="auth-display-photo">
-
+  <div class="gradiant-div">
+    <h2>Your Expertise.</h2>
+    <h2>Our Platform.</h2>
+    <h2>Endless Style.</h2>
+  </div>
  </div>  
  <div class="auth-form">
     <span class="auth-form-title-span">GROOMROOM.</span>
@@ -17,12 +21,12 @@
         <form class="auth-form-inside">
             
             <div class="input-control border">
-                <input type="text" autocomplete="off" class="barber-id-input"> 
+                <input type="text" autocomplete="off" class="barber-id-input" placeholder="Enter the Barber Code"> 
             </div>
            <div class="input-control border">
-            <input type="password" autocomplete="off" class="barber-password-input">
+            <input type="password" autocomplete="off" class="barber-password-input" placeholder="Enter the password">
            </div>
-           <div class="input-control-btn border">
+           <div class="input-control-btn">
             <button type="submit" class="barber-auth-btn">Submit</button>
            </div>
         </form>
