--- a/Barber/Barber/templates/base.html
+++ b/Barber/Barber/templates/base.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,5 +10,6 @@
     <main>
         {% block content %}{% endblock %}
     </main>
+<script src="{% static 'js/app/landing.js' %}"></script>
 </body>
 </html>
