--- a/Barber/Barber/templates/Barber/landing.html
+++ b/Barber/Barber/templates/Barber/landing.html
@@ -10,8 +10,35 @@
     <img src="{%static 'icons/app/queue2.png'%}" class="queue-icon">
     <div class="sidebar" id="sidebar">
     </div>
-    <div class="seat"></div>
-    <div class="seat"></div>
-    <div class="seat"></div>
+    <div class="add-seat-btn-container">
+        <button class="add-seat"><i style="border: none; color: white; font-size: 44px; font-style: normal;"> 	&#43;</i></button>
+    </div>
+    <!-- <div class="seat-container">
+        <span><b>Estimated time : 3min</b></span>
+        <div class="seat" id="seat">
+            <div class="delete-seat-btn">
+                &#215;
+            </div>
+        </div>
+        <span>
+            partner 1
+        </span>
+       
+    </div>
+    <div class="seat-container">
+        <span><b>Estimated time : 3min</b></span>
+        <div class="seat" id="seat">
+            <div class="delete-seat-btn">
+                &#215;
+            </div>
+        </div>
+        <span>
+            partner 1
+        </span>
+      
+    </div> -->
+   
+    
+   
 </div>
 {% endblock %}
