--- a/Barber/Barber/static/css/Barber/landing-page.css
+++ b/Barber/Barber/static/css/Barber/landing-page.css
@@ -28,13 +28,19 @@
 .add-seat-btn-container{
     padding-top: 36px;
 }
-.container .seat{
+.seat-container .seat{
+    border: solid black 1px;
     position: relative;
     width: 150px;
     height:150px;
     border-radius: 50%;
-    background-color: rgb(25, 197, 82);
-    /* display: none; */
+}
+
+.seat img{
+    position:relative;
+    width: 120px;
+    height:120px;
+    border: 1px solid black;
 }
 .seat:hover .delete-seat-btn{
     /* display: block; */
@@ -100,4 +106,8 @@ button.add-seat{
     height:55px;
     right: 15px;
     top:10px;
+}
+.border{
+    border: 1px solid black;
+
 }
