logout button front-end created

--- a/Barber/Barber/templates/Barber/landing.html
+++ b/Barber/Barber/templates/Barber/landing.html
@@ -9,16 +9,24 @@
     <i class="fa fa-bars menu-icon" style="font-size:36px" id="menu-icon"></i>
     <img src="{%static 'icons/app/queue2.png'%}" class="queue-icon">
     <div class="sidebar" id="sidebar">
+        <div class="sidebar-profile-card">
+          <div class="profile-photo">
+          </div>
+          <span style="font-size:24px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif"><B>Durgesh Nai</B></span>
+        </div>
+        <button class="Btn">
+  
+            <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
+            
+            <div class="text">Logout</div>
+          </button>
     </div>
     <div class="add-seat-btn-container">
         <button class="add-seat"><i style="border: none; color: white; font-size: 44px; font-style: normal;"> 	&#43;</i></button>
     </div>
-    <div class="seat-container border">
-        <span class="border"><b>Estimated time : 3min</b></span>
-        <div class="seat border" id="seat">
-            <div class="seat-img">
-                <img src="{%static 'icons/app/queue2.png'%}">
-            </div>
+    <!-- <div class="seat-container">
+        <span><b>Estimated time : 3min</b></span>
+        <div class="seat" id="seat">
             <div class="delete-seat-btn border">
                 &#215;
             </div>
@@ -27,7 +35,7 @@
             partner 1
         </span>
        
-    </div>
+    </div> -->
     <!-- <div class="seat-container">
         <span><b>Estimated time : 3min</b></span>
         <div class="seat" id="seat">
