--- a/Barber/Barber/static/css/Barber/landing-page.css
+++ b/Barber/Barber/static/css/Barber/landing-page.css
@@ -29,24 +29,30 @@
     padding-top: 36px;
 }
 .seat-container .seat{
-    border: solid black 1px;
+    /* border: solid black 1px; */
     position: relative;
     width: 150px;
     height:150px;
     border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("/static/icons/app/armchair.svg");
+    background-size:120px;
 }
 
-.seat img{
+/* .seat .seat-img{
     position:relative;
-    width: 120px;
-    height:120px;
+    width: 100%;
+    height:100%;
+    border-radius: 50%;
     border: 1px solid black;
-}
+} */
 .seat:hover .delete-seat-btn{
     /* display: block; */
     visibility: visible;
     opacity: 1;
     transition: opacity 0.2s ease-in;
+    cursor: pointer;
 }
 .delete-seat-btn{
     position: absolute;
@@ -95,8 +101,28 @@ button.add-seat{
     left:-500px;
     transition: left 0.3s ease;
     z-index: 1;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
 }
-
+.sidebar-profile-card{
+    width:100%;
+    height: 25%;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: space-around;
+}
+.profile-photo{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color:white;
+    margin-top:20px;
+    background:  url("/static/images/landing/nai.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 .container .menu-icon:hover{
     color:greenyellow;
 }
@@ -107,6 +133,73 @@ button.add-seat{
     right: 15px;
     top:10px;
 }
+.Btn {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: rgb(255, 65, 65);
+    margin-top: 10px;
+  }
+  
+  /* plus sign */
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sign svg {
+    width: 17px;
+  }
+  
+  .sign svg path {
+    fill: white;
+  }
+  /* text */
+  .text {
+    position: absolute;
+    right: 0%;
+    width: 0%;
+    opacity: 0;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    transition-duration: .3s;
+  }
+  /* hover effect on button width */
+  .Btn:hover {
+    width: 125px;
+    border-radius: 10px;
+    transition-duration: .3s;
+  }
+  
+  .Btn:hover .sign {
+    width: 30%;
+    transition-duration: .3s;
+    padding-left: 20px;
+  }
+  /* hover effect button's text */
+  .Btn:hover .text {
+    opacity: 1;
+    width: 70%;
+    transition-duration: .3s;
+    padding-right: 10px;
+  }
+  /* button click effect*/
+  .Btn:active {
+    transform: translate(2px ,2px);
+  }
 .border{
     border: 1px solid black;
 
