--- a/Barber/Barber/static/css/Barber/landing-page.css
+++ b/Barber/Barber/static/css/Barber/landing-page.css
@@ -112,8 +112,7 @@ button.add-seat{
     transition-duration: 1s;
     z-index: 2;
 }
-.container .sidebar,.queue-sidebar{
-    position: relative;
+.container .sidebar{
     height: 100vh;
     width: 25%;
     background: #333; /* Dark gray */
@@ -126,21 +125,9 @@ button.add-seat{
     flex-direction:column;
     align-items: center;
 }
-.queue-sidebar{
-  position: relative;
-  height: 100vh;
-  width: 25%;
-  background: #333; /* Dark gray */
-  color: white; 
-  position:absolute;
-  top:0;
-  right:-500px;
-  transition: right 0.3s ease;
-  z-index: 1;
-  display: flex;
-  flex-direction:column;
-  align-items: center;
-}
+
+
+
 .sidebar-profile-card{
     width:100%;
     height: 25%;
@@ -339,6 +326,114 @@ button.add-seat{
   border-radius: 10px;
 
 }
+/* queue-sidebar-styles */
+.container .queue-sidebar{
+  position:absolute;
+  height: 100vh;
+  width: 28%;
+  background: #333; /* Dark gray */
+  color: white; 
+  transition:top 0.6s ease;
+  top: -5000px;
+   right:0;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+}
+.container .queue-sidebar h2{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 100%;
+  height:60px;
+  padding:5px;
+  font-size: 28px;
+  color: #5bcd47;
+}
+.next-person-container{
+  width: 100%;
+  height: 25%;
+  padding: 2%;
+  box-shadow:0px 2px rgb(41, 41, 41);
+}
+.next-person-container .next-person{
+  width: 100%;
+  height:75%;
+  background-color: #6ddb28;
+  border-radius:20px;
+  display: flex;
+  flex-direction: row;
+  padding: 1.5%;
+}
+.next-person-profile-pic{
+  width: 65px;
+  height: 65px;
+  border-radius: 50%;
+  background-color:white;
+  background:  url("/static/images/landing/person.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left:20px;
+}
+.next-person-name{
+  width: 55%;
+  padding:5.1%;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+.person-discard-btn{
+  width: 30px;
+  height:30px;
+  border-radius: 50%;
+  outline: 0;
+  border:none;
+  box-shadow: 0;
+  background-color: rgb(226, 13, 13) !important;
+  cursor: pointer;
+  margin-left:14px;
+  margin-top: 18px;
+  font-size: 17px;
+  font-weight: bolder;
+  align-content: center;
+  color: white;
+}
+.upcoming-persons-list{
+width: 100%;
+height:100vh;
+overflow-y: scroll;
+}
+.person-in-queue{
+width: 100%;
+height:13%;
+display: flex;
+flex-direction: row;
+padding: 2%;
+border-bottom:1px solid #7a7979;
+padding-left: 15px;
+}
+.person-in-queue-profile-pic{
+  width: 35px;
+  height:35px;
+  border-radius: 50%;
+  background-color:white;
+  background:  url("/static/images/landing/person.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left:20px;
+  margin-top:5px;
+  opacity: 0.4;
+}
+.person-in-queue-name{
+width: 55%;
+padding:2%;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+display: flex;
+flex-direction: column;
+margin-left: 15px;
+align-items: center;
+color: #aaa;
+}
+
+
 .border{
     border: 1px solid black;
 
